app/src/main/java/com/example/movietest/ui/components/error/Messages.kt
package com.example.movietest.ui.components.error

const val HELP_TEXT = "Please, check it and try again."
const val ERROR_404_TITLE = "ERROR 404 - NOT FOUND"
const val ERROR_404_DESCRIPTION = "The name is not correct. $HELP_TEXT"
const val ERROR_DISMISS_TEXT = "Dismiss"